--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,10 @@
   <body>
     <div class="container">
       <div class="" id="header">
-        <div id='indexHeader'>DCDB INDEX PAGE</div>
+        <div id='indexHeader'>DCDB INDEX</div>
         <a class="waves-effect btn-small black-text pink lighten-5 " href="/dcdb/newcoupon">enter new d/c</a>
       </div>
-      <table>
+      <!-- <table>
         <thead>
           <tr>
             <th></th>
@@ -34,7 +34,25 @@
           </tr>
         <% } %>
         </tbody>
-      </table>
+      </table> -->
+      <div class="row">
+      <% for(let i = 0; i < coupons.length; i++) { %>
+        <div class="col s12 m6 l4">
+          <div class="card" id="card-border">
+            <div class="card-content"  id="card">
+              <span class="card-title red-text"><%=coupons[i].discountAmount%></span>
+              <!-- <div class="card-action"> -->
+                <a href="/dcdb/<%= coupons[i].id %>" class="btn-floating halfway-fab waves-effect waves-light red" id="fab">details</a>
+              <!-- </div> -->
+              <span class="card-title">on <%=coupons[i].itemName%></span>
+              <span class="card-content blue-text">by <%=coupons[i].makerName%></span>
+              <p>use by <%= coupons[i].expirationDate %></p>
+            </div>
+            </div>
+          </div>
+      <% } %>
+        </div>
+      </div>
     </div>
   </body>
 </html>
