--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
     <% include ./partials/head.ejs %>
   </head>
   <body>
-    <div class="container">
-      <div class="" id="header">
-        <div id='indexHeader'>DCDB INDEX</div>
-        <a class="waves-effect btn-small black-text pink lighten-5 " href="/dcdb/newcoupon">enter new d/c</a>
-      </div>
+    <div class="col s10 m10 l10" id="header">
+      <div id='indexHeader'>Personal Discount Database</div>
+      <a class="waves-effect btn-small black-text pink lighten-5 " href="/dcdb/newcoupon" id="newlink">enter new d/c</a>
+    </div>
+    <div class="container" id="indexContainer">
       <!-- <table>
         <thead>
           <tr>
@@ -38,8 +38,8 @@
       <div class="row">
       <% for(let i = 0; i < coupons.length; i++) { %>
         <div class="col s12 m6 l4">
-          <div class="card" id="card-border">
-            <div class="card-content"  id="card">
+          <div class="card">
+            <div class="card-content">
               <span class="card-title red-text"><%=coupons[i].discountAmount%></span>
               <!-- <div class="card-action"> -->
                 <a href="/dcdb/<%= coupons[i].id %>" class="btn-floating halfway-fab waves-effect waves-light red" id="fab">details</a>
@@ -52,6 +52,9 @@
           </div>
       <% } %>
         </div>
+      </div>
+      <div class="col s10 m10 l10" id="footer">
+        <a>home|</a><a> about|</a><a href="">contact</a>
       </div>
     </div>
   </body>
