--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,29 +5,39 @@
   </head>
   <body>
     <div class="container" id="showContainer">
-      <div class="showHeader">
-        <h1><%=coupon.makerName%></h1>
+      <div class="sidebar" id="<%=coupon.tags%>"></div>
+      <div class="details">
+        <div class="showHeader">
+          <a href="/dcdb">back</a>
+          <h3><%=coupon.makerName%></h3>
+        </div>
+        <div class="showBody">
+          <p>item: <%=coupon.itemName%></p>
+          <p>link for coupon:</p><a href="<%=coupon.link%>">Go to coupon website</a>
+          <p>discount amount: <%=coupon.discountAmount%></p>
+          <p>expires on: <%=coupon.expirationDate%></p>
+          <p>
+            <%if(coupon.storeCoupon == true) { %>
+                this is a STORE COUPON.
+            <% } else { %>
+                this is a MANUFACTURERS COUPON, use it anywhere!
+            <% } %>
+          </p>
+          <p>tags: <%=coupon.tags%></p>
+        </div>
+        <div class="showButtons">
+          <form class="waves-effect waves-light btn-small white-text pink lighten-4 editbutton" action="/dcdb/<%=coupon.id%>/edit">
+            <input type="submit" name="edit" value="edit" class="pink lighten-4"/>
+          </form>
+          <!-- <a class="waves-effect waves-light btn-small white-text pink lighten-4" href="/dcdb/<%=coupon.id%>/edit" id="editbutton">edit</a> -->
+          <form class="waves-effect waves-light btn-small white-text pink lighten-4 editbutton" action="/dcdb/<%=coupon.id%>?_method=DELETE" method="POST">
+            <input type="submit" name="edit" value="delete" class="pink lighten-4"/>
+          </form>
+        </div>
       </div>
-      <div class="showBody">
-        <p>item: <%=coupon.itemName%></p>
-        <p>link for coupon: <%=coupon.link%></p>
-        <p>discount amount: <%=coupon.discountAmount%></p>
-        <p>expires on: <%=coupon.expirationDate%></p>
-        <p>
-          <%if(coupon.storeCoupon == true) { %>
-              this is a STORE COUPON.
-          <% } else { %>
-              this is a MANUFACTURERS COUPON, use it anywhere!
-          <% } %>
-        </p>
-        <p>Notes: <%=coupon.notes%></p>
-      </div>
-      <div class="showButtons">
-        <a class="waves-effect waves-light btn-small white-text light-blue darken-2" href="/dcdb/<%=coupon.id%>/edit">edit</a>
-        <form class="" action="/dcdb/<%=coupon.id%>?_method=DELETE" method="POST">
-          <input type="submit" name="" value="delete"/>
-        </form>
-      </div>
+    </div>
+    <div class="col s10 m10 l10" id="footer">
+      <a>home|</a><a> about|</a><a href="">contact</a>
     </div>
   </body>
 </html>
