--- a/views/show.ejs
+++ b/views/show.ejs
@@ -37,7 +37,9 @@
       </div>
     </div>
     <div class="col s10 m10 l10" id="footer">
-      <a>home|</a><a> about|</a><a href="">contact</a>
+      <img src="./images/Facebook.png" alt="" style="width:30px; height:30px">
+      <img src="./images/Pinterest.png" alt="" style="width:30px; height:30px">
+      <img src="./images/Twitter.png" alt="" style="width:30px; height:30px">
     </div>
   </body>
 </html>
