--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(252,228,236, 0.7);
+  font-family: 'Barlow Condensed', sans-serif;
 }
 /* ====== INDEX PAGE ======== */
 #indexContainer {
@@ -15,7 +16,7 @@ body {
 #indexHeader {
   font-size: 60px;
 }
-#newlink {
+.newlink {
   margin-bottom: 2em;
 }
 .card {
@@ -41,6 +42,10 @@ body {
 .itemname, .makername, .expdate {
   font-family: 'Barlow Condensed', sans-serif;
 }
+table {
+  background-color: rgb(252,228,236, 0.8);
+  font-size: 20px
+}
 #footer {
 text-align: center;
 padding: 1em;
@@ -50,9 +55,9 @@ padding: 1em;
 }
 /* ============ SHOW PAGE ============= */
 #showContainer {
-  width: 40vw;
-  height: 50vw;
-  margin: 50px auto;
+  width: 60vw;
+  height: 70vw;
+  margin: 25px auto;
   display: flex;
   border-radius: 10px;
   box-shadow: 1px 1px 10px #bbb,
@@ -145,22 +150,23 @@ padding: 1em;
   background-position: center;
 }
 .details {
+  text-align: center;
   width: 50%;
   background: #f9f9f9;
   border-radius: 0 10px 10px 0;
   padding: 15px 30px;
   box-sizing: border-box;
   margin: 1em;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .details p {
   margin: 1em;
-  font-size: 10px;
+  font-size: 20px;
   width: 80%;
 }
 .details a {
   margin: 1em;
-  font-size: 10px;
+  font-size: 13px;
 }
 .showButtons {
   margin: 3em auto;
@@ -169,52 +175,13 @@ padding: 1em;
   font-size: 10px;
   margin: 1em;
 }
-
-/* ///////////// EDIT PAGE //////////////// */
-/* #edit {
-  background: url('./imgs/editbackground1.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-#editcontainer {
-  background-color: RGB(225,221,215,0.8);
-  margin: 3em auto;
-  height: 75vw;
-  width: 60%;
-  border: 8px;
-  border-style: dotted;
-  border-color: black;
-}
-
-#editHeader {
-  margin-left: 2em;
-  background: url('./imgs/editheader.jpg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 20vw;
-  width: 50%;
-}
-#editHeader h1 {
-  margin-left: 5.5em;
-}
-#editbody {
-  padding: 3em;
-  margin: 0em 0 2em 0;
-  width: 80%;
-}
-#editsubmit {
-  color: black;
-  border: 2px;
-  border-style: solid;
-  border-color: black;
-} */
+/* ///////// EDIT PAGE /////////// */
 #editbody {
   background-color: rgb(230,188,152)
 }
 #editcontainer {
-  width: 80vw;
-  height: 90vw;
+  width: 60vw;
+  height: 70vw;
   margin: 50px auto;
   display: flex;
   border-radius: 10px;
@@ -232,13 +199,14 @@ padding: 1em;
   background-position: left;
   background-color: black;
 }
-#new {
+#edit {
   width: 50%;
   background: #f9f9f9;
   border-radius: 0 10px 10px 0;
-  padding: 15px 30px;
+  padding: 10px 15px;
   box-sizing: border-box;
-  overflow: auto;
+  margin: 0;
+  overflow-y: auto;
 }
 #editsubmit {
   margin: 2em;
@@ -251,9 +219,12 @@ padding: 1em;
   display: flex;
 }
 /* ////////////// NEW COUPON PAGE //////////// */
+#newbody {
+  background-color: rgb(253,216,53)
+}
 #newContainer {
-  width: 80vw;
-  height: 90vw;
+  width: 60vw;
+  height: 70vw;
   margin: 50px auto;
   display: flex;
   border-radius: 10px;
@@ -275,7 +246,7 @@ padding: 1em;
   width: 50%;
   background: #f9f9f9;
   border-radius: 0 10px 10px 0;
-  padding: 15px 30px;
+  padding: 5px 10px;
   box-sizing: border-box;
   overflow: auto;
 }
