--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,7 +3,7 @@
   <head>
     <% include ./partials/head.ejs %>
   </head>
-  <body>
+  <body id="newbody">
     <div class="container" id="newContainer">
       <div class="newsidebar"></div>
       <div id="new">
@@ -59,7 +59,9 @@
         </div>
       </div>
       <div class="col s10 m10 l10" id="footer">
-        <a>home|</a><a> about|</a><a href="">contact</a>
+        <img src="./images/Facebook.png" alt="" style="width:30px; height:30px">
+        <img src="./images/Pinterest.png" alt="" style="width:30px; height:30px">
+        <img src="./images/Twitter.png" alt="" style="width:30px; height:30px">
       </div>
   </body>
 </html>
