--- a/views/listdate.ejs
+++ b/views/listdate.ejs
@@ -7,16 +7,16 @@
     <div class="col s10 m10 l10" id="header">
       <div id='indexHeader'>Personal Discount Database</div>
       <a class="waves-effect btn-small black-text pink lighten-5 newlink" href="/dcdb/newcoupon">enter new d/c</a>
-      <a class="waves-effect btn-small black-text pink lighten-5 newlink" href="/dcdb">coupon view</a>
+      <a class="waves-effect btn-small black-text pink lighten-5 newlink" href="/dcdb">list view</a>
     </div>
     <div class="container" id="indexContainer">
     <table>
         <thead>
           <tr>
             <th></th>
-            <th>Item</th>
+            <th>exp date</th>
+            <th><a href="/dcdb/list">Item</a></th>
             <th><a href="/dcdb/list/company">Company</a></th>
-            <th><a href="/dcdb/list/date">exp date</a></th>
             <th>Details</th>
           </tr>
         </thead>
@@ -28,9 +28,9 @@
                 <input  type="submit" name="" value="delete"/>
               </form>
             </th>
+            <th><%= coupons[i].expirationDate %></th>
             <th><%= coupons[i].itemName %></th>
             <th>by <%= coupons[i].makerName %></th>
-            <th><%= coupons[i].expirationDate %></th>
             <th><a href="/dcdb/<%= coupons[i].id %>" class="waves-effect waves-light btn-small white-text light-blue darken-2">details</a></th>
           </tr>
         <% } %>
