--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -37,7 +37,7 @@
             <legend>Tags</legend>
             <input type="text" name="tags" value="<%=coupon.tags%>"/>
           </fieldset>
-          <input type="submit" name="" value="add new coupon" class="btn btn-danger" id="editsubmit"/>
+          <input type="submit" name="" value="update coupon" class="btn btn-danger" id="editsubmit"/>
         </form>
         </div>
       </div>
