fixed 'NO LINK' to 'PAPER COUPON' on show.ejs

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,8 +14,8 @@
         <div class="showBody">
           <p>item: <%=coupon.itemName%></p>
           <p>link for coupon:</p>
-            <% if (coupon.link == 'NO LINK') { %>
-              <p>'NO LINK'</p>
+            <% if (coupon.link == 'PAPER COUPON') { %>
+              <p>'PAPER COUPON'</p>
             <% } else { %>
               <a href="<%=coupon.link%>">Go to coupon website</a>
             <% } %>
