took out /dcdb in URL

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,9 +7,9 @@
     <div class="container" id="editcontainer">
       <div class="editsidebar"></div>
       <div id="edit">
-        <a href="/dcdb/<%=coupon.id%>">back</a>
+        <a href="/<%=coupon.id%>">back</a>
         <h2 class="showh2">EDIT COUPON</h2>
-        <form action="/dcdb/<%=coupon.id%>?_method=PUT" method="POST">
+        <form action="/<%=coupon.id%>?_method=PUT" method="POST">
           <fieldset>
             <label class="black-text" id="storecoupon">
               <input type="checkbox"
