--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,9 +7,9 @@
     <div class="container" id="newContainer">
       <div class="newsidebar"></div>
       <div id="new">
-        <a href="/dcdb">back</a>
+        <a href="/">back</a>
         <h1 class="showh1">NEW COUPON</h1>
-        <form action="/dcdb" method="POST">
+        <form action="/" method="POST">
           <fieldset>
             <label>
               <input type="checkbox" name="storeCoupon"/>
